# llvm_practice

./: .gitignore  CMakeLists.txt  EvaLLVM  README.md
.cache/clangd/index/: main.cpp.30FB4B6C9FF663E0.idx
TOY/: compile_commands.json  xmake.lua
TOY/.cache/clangd/index/: __msvc_bit_utils.hpp.59F7767BF073C428.idx  __msvc_iter_core.hpp.12543139A0647581.idx  __msvc_sanitizer_annotate_container.hpp.50AD54F3AFE56791.idx  __msvc_string_view.hpp.F27AD6629554D123.idx  __stddef_header_macro.h.1A299AFF1E7CD540.idx  __stddef_max_align_t.h.014794761D7F809D.idx  __stddef_null.h.97F408FA17F2DA38.idx  __stddef_nullptr_t.h.262A05421FF13ACE.idx  __stddef_offsetof.h.A2EFF106ABA1749B.idx  __stddef_ptrdiff_t.h.EB0AB22027E65809.idx  __stddef_size_t.h.98137B0F86B101F5.idx  __stddef_wchar_t.h.76AFB3181D8ADF55.idx  adcintrin.h.CA57B0F252587E1B.idx  cctype.E5E14C129D25BDAC.idx  cfloat.71703267953D8884.idx  climits.174ED0EE423F84BF.idx  corecrt.h.01F2CE4D5EB7FBDE.idx  corecrt_search.h.170D78CEAA3C6D0D.idx  corecrt_wstdio.h.9C73115D12822029.idx  corecrt_wstdlib.h.5240F871D0561C51.idx  corecrt_wstring.h.C5CA2D0F244B7244.idx  crtdefs.h.1F076EBB285D9DC0.idx  cstddef.4B474B093A86D79E.idx  cstdint.B2ADBA74DC7B1FFB.idx  cstdio.1C365D07F0EED7D4.idx  cstdlib.393E6FEF9E8A23E4.idx  (+39 more)
TOY/src/: toy.cpp
TOY_LLVM/: .gitattributes  CMakeLists.txt  toy.cpp
basic-usage/: macro.c  multiply.c  multiply.ll  multiply1.ll  output.bc  output1.ll  test.bc  test.ll  test.s  test1.bc  test1.ll  test2.bc  test2.ll  test2.s  testfile.ll
include/: toydialect.h
src/: evallvm.hpp  main.cpp
test/: test.ll  test.s
